--- a/src/components/about/about.component.html
+++ b/src/components/about/about.component.html
@@ -1,11 +1,11 @@
 <div class="page-container-about">
+  <div class="image-container">
+    <img src="../../assets/esfera-paises-fondo.png" alt="esfera-paises" class="about-image img-fluid" />
+  </div>
   <div class="about-container">
     <h2>About Países APP</h2>
     <!-- Tu contenido de texto aquí -->
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, minus, officiis porro nobis debitis vitae corrupti deleniti possimus delectus omnis beatae, libero ab incidunt quasi veniam facere iure obcaecati ratione!</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, aspernatur quo. Illo autem earum quibusdam! Soluta libero, sequi ut ab, molestiae aut sapiente est nesciunt iste, consectetur neque deleniti nisi?</p>
     <button class="btn-volver" (click)="goToHome()">Back</button>
-  </div>
-  <div class="image-container">
-    <img src="../../assets/esfera-paises-fondo.png" alt="esfera-paises" class="about-image img-fluid" />
   </div>
 </div>
