--- a/src/components/favorites/favorites.component.html
+++ b/src/components/favorites/favorites.component.html
@@ -13,8 +13,8 @@
               <h3>Capital: {{ pais.capital }}</h3>
               <h3>Population: {{ pais.population }}</h3>
               <button class="remove-button" (click)="removeFromFavorites(pais)">Delete favorite</button>
+              <button class="btn btn-primary" (click)="editCountry(pais)">Edit</button>
               
-            </div>
           </div>
         </div>
       </div>
