--- a/src/components/about/about.component.html
+++ b/src/components/about/about.component.html
@@ -5,7 +5,17 @@
   <div class="about-container">
     <h2>About Países APP</h2>
     <!-- Tu contenido de texto aquí -->
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, aspernatur quo. Illo autem earum quibusdam! Soluta libero, sequi ut ab, molestiae aut sapiente est nesciunt iste, consectetur neque deleniti nisi?</p>
+    <p>¡Bienvenido a mi proyecto! 
+      Este proyecto se hizo con la finalidad de llevar acabo un challenge laboral con Angular, Typescript y Boostrap.
+      Es una apiRest de países, en la cual trabajé elaborando los siguientes componentes: Navbar, Searchbar, Componente Favoritos para ver y guardar los países, componente Create para crear el país que desee, y Componente Edit para poder editar los países creados. Cuenta también con un Componente para el paginado y un componente Welcome para la primera vista de la página.
+      </p>
+
+<p> Esta web se trabajó con las siguientes tecnologías: Angular, Typescript, CSS y Boostrap; éste último lo utilicé en algunos componentes como los formularios de creación y edición de países para llevar un estilo responsive para los diferentes dispositivos.
+  Cuenta también con sus servicios necesarios para consumir la api y otros para Crear/Editar países. Cada componente viene acompañado con su enrutamiento lógico para tener una mejor búsqueda y navegación en la pagina. </p>
+
+  <p>
+    Mi nombre es Mauro Gatica y espero que les guste.
+  </p>
     <button class="btn-volver" (click)="goToHome()">Back</button>
   </div>
 </div>
