--- a/src/components/navbar/navbar.component.css
+++ b/src/components/navbar/navbar.component.css
@@ -51,16 +51,16 @@ button:hover {
   color: yellow;
 }
 
-/* Estilos para dispositivos móviles y tablets */
+
 @media screen and (max-width: 768px) {
   .navbar {
     padding: 5px 0;
-    text-align: center; /* Centra el contenido en dispositivos pequeños */
+    text-align: center; 
   }
   
   .nav-list {
-    flex-direction: column; /* Cambia la dirección a columna para dispositivos pequeños */
-    align-items: center; /* Centra los elementos en dispositivos pequeños */
+    flex-direction: column; 
+    align-items: center; 
   }
   
   .nav-list li {
