repare componente favorite

--- a/src/components/favorites/favorites.component.html
+++ b/src/components/favorites/favorites.component.html
@@ -1,5 +1,4 @@
 <div class="contenedor1">
-  
   <button class="btn-volver" (click)="goToHome()">Back</button>
   <div class="page-container">
     <div class="containerfavs">
@@ -7,18 +6,23 @@
       <div class="cards-container">
         <div class="country-item" *ngFor="let pais of favoritos">
           <div class="card-content">
-            <img [src]="pais.flags.png" alt="{{ pais.name.common }} Flag" class="Flag" />
-            <div class="CountryDetails">
-              <h1>{{ pais.name.common }}</h1>
-              <h3>Capital: {{ pais.capital }}</h3>
-              <h3>Population: {{ pais.population }}</h3>
-              <button class="remove-button" (click)="removeFromFavorites(pais)">Delete favorite</button>
-              <button class="btn btn-primary" (click)="editCountry(pais)">Edit</button>
-              
+            <img [src]="pais.flags.png" alt="{{ pais.name?.common }} Flag" class="Flag" />
+            <div class="country-details">
+              <h1> Pais: {{ pais.name?.common }}</h1>
+              <div class="property">
+                <h3>Capital: {{ pais.capital }}</h3>
+              </div>
+              <div class="property">
+                <h3>Population: {{ pais.population }}</h3> 
+              </div>
+              <div class="buttons">
+                <button class="remove-button" (click)="removeFromFavorites(pais)">Delete favorite</button>
+                <button class="btn btn-primary" (click)="editCountry(pais)">Edit</button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  
 </div>
