terminado comp Favorites

--- a/src/components/favorites/favorites.component.html
+++ b/src/components/favorites/favorites.component.html
@@ -8,7 +8,7 @@
           <div class="card-content">
             <img [src]="pais.flags.png" alt="{{ pais.name?.common }} Flag" class="Flag" />
             <div class="country-details">
-              <h1> Pais: {{ pais.name?.common }}</h1>
+              <h1>{{ pais.name?.common }}</h1>
               <div class="property">
                 <h3>Capital: {{ pais.capital }}</h3>
               </div>
